<resources>
    <string name="app_name">NavigationApp</string>
    <string name="steps_list_description">Liste des étapes de navigation</string>
    <string name="lancer_la_navigation">Lancer la navigation</string>
    <string name="instruction">Instruction</string>
    <string name="image">image</string>
    <string name="arreter_la_navigation">X</string>
    <string name="destination">📍Destination</string>
    <string name="search">Search</string>
    <string name="select_your_vehicle">Select your vehicle</string>
    <string name="time">... min</string>
    <string name="distance">... km</string>
    <string name="start_navigation_description">Start navigation\n</string>
    <string name="stop_navigation_description">stop navigation</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="se_connecter_l_appareil">Se connecter à l\'appareil</string>
    <string name="connexion">Connexion</string>
    <string name="image_du_v_hicule">Image du véhicule</string>
    <string name="connexion_un_appareil">Connexion à un appareil</string>
    <string name="se_connecter_un_appareil">Rechercher un appareil</string>
    <string name="deleteProfile">Supprimer ce profil</string>
    <string name="connecter_l_appareil">Connecter l\'appareil</string>
    <string name="explain_conect">"Avant de continuer, veuillez d'abord jumeler votre appareil via les paramètres Bluetooth du téléphone. Ensuite, cliquez sur le bouton ci-dessous pour connecter l'application à l'appareil."</string>
    <string name="DeviceConnexion">Connexion en cours..</string>
</resources>