<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_page1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <LinearLayout
        android:id="@+id/layout_navigation_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        map:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            map:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etDestination"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:autofillHints="enter your destination"
                android:hint="@string/destination"
                android:inputType="text"
                android:padding="16dp"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/searchNavigationButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toBottomOf="@+id/layout_input" />
        </LinearLayout>
    </LinearLayout>


    <!-- 1. La carte OSMdroid -->
    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_marginTop="65dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:id="@+id/layout_instruction"
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_black_background"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        map:layout_constraintTop_toTopOf="parent">

        <!-- ImageView pour la flèche -->
        <ImageView
            android:id="@+id/arrowImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/image"
            android:background="@drawable/rounded_white_background"/>

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/instruction"
            android:textSize="18sp"
            android:padding="16dp"
            android:color="#FFFFFF"
            android:gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnOpenModal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:layout_gravity="end|top"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="180dp"/>

    <LinearLayout
        android:id="@+id/layout_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/rounded_black_background"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="100dp"
        map:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/navigation_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/time"
            android:textSize="18sp"
            android:padding="16dp"
            android:color="#FFFFFF"
            android:gravity="center" />

        <TextView
            android:id="@+id/navigation_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/distance"
            android:textSize="18sp"
            android:padding="16dp"
            android:color="#FFFFFF"
            android:gravity="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Bouton pour lancer la navigation -->
        <Button
            android:id="@+id/btnStartNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:drawableStart="@drawable/round_navigation_white_48"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            android:contentDescription="@string/start_navigation_description"
            android:elevation="6dp" />

        <!-- 2. Bouton pour arreter la navigation -->
        <Button
            android:id="@+id/btnFinishNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/osm_ic_follow_me"
            android:textColor="@android:color/white"
            android:elevation="6dp"
            android:contentDescription="@string/stop_navigation_description"
            android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>
